Time: 11 ms (99.37%), Space: 45.5 MB (25.12%) - LeetHub